<resources>
    <string name="app_name">VampiAlumno</string>
    <string name="failure_no_internet">Theres is no internet connection</string>
    <string name="failure_db">We could not connect to the database</string>
    <string name="failure_unauthorized">You are no logged in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- COMUNES -->
    <string name="title_login">Vampi Escuela</string>
    <string name="hint_matricula">Matrícula</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="title_menu">Menú Principal</string>
    <string name="btn_menu_materias">Materias</string>
    <string name="btn_menu_perfil">Perfil</string>
    <string name="btn_menu_logout">Cerrar Sesión</string>
    <string name="copyright">© Hermanas Vampiro Inc.</string>
    <string name="nombre">Vampi nombre</string>
    <string name="ap1">Vampi apellido paterno</string>
    <string name="ap2">Vampi apellido materno</string>
    <string name="correo">Vampi correo</string>
    <string name="materias">Materias</string>
</resources>